package donante;

public enum TipoDoc {
    DNI,
    CUIT
}
